--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Catstagram</title>
+  <link rel="stylesheet" href="./main.css">
+  <script type="module" src="./index.js"></script>
 </head>
 
 <body>
